# agents-at-scale-ark

./: .ark.env.local  .gitignore  API_TESTING_EXPLANATION.md  ARK_TEAM_STRATEGIES.md  CICD_DEPLOYMENT_GUIDE.md  CLAUDE.md  CLI_PROJECT_EXPLANATION.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEMO_STORYLINE.md  DEPLOYMENT_FIX.md  HOW_TO_TEST_AUTH.md  LANGFUSE_OBSERVABILITY.md  NAMESPACE_FIX.md  QUICKSTART_N8N.md  README.md  SPECIFICATION_N8N_INTEGRATION.md  check_auth_status.py  claude2.md  claude3.md  claude4.md  debug-large-timeout-test.yaml  devspace.yaml  eval-compatible-model.yaml  helpers.mk  list_auth_routes.py  package-lock.json  quick_auth_test.py  show_auth_routes.py  show_auth_routes_simple.py  test-annotation-pricing-agent.yaml  test-annotation-pricing-evaluation.yaml  test-annotation-pricing-query.yaml  test-debug-logging-evaluation.yaml  test-debug-logging-query.yaml  test-evaluation.yaml  test-final-debug-evaluation.yaml  test-final-debug-query.yaml  test-new-code-evaluation.yaml  test-new-code-query.yaml  (+8 more)
.github/: CHANGELOG.md  release-please-config.json
.husky/: pre-push
ark/: go.mod  go.sum
demo-resources/: README.md  banking-demo-all.yaml  model-and-rbac.yaml  setup-demo-secrets.sh
docs/: package-lock.json  package.json  system-message-memory-control.md
samples/: README.md  README2.md  webpage.html
samples/pr-review-team/service/: Dockerfile  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  Makefile  QUICKSTART.md  README.md  local-test.sh  pyproject.toml
samples/pr-review-team/service/src/ark_pr_reviewer/: __init__.py  api.py  ark_client.py  config.py  github_client.py  jira_client.py  models.py  s3_logger.py
scripts/: build-and-push.sh  dev-no-auth.sh  dev-with-auth.sh  quickstart.sh  (+1 more)
services/ark-api/ark-auth/ark-auth/: pyproject.toml
services/ark-api/ark-auth/ark-auth/src/ark_auth/: config.py  utils.py
(+632 files in other folders)
