[project]
name = "ark-auth"
version = "0.1.0"
description = "Authentication utilities for ark services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.24.0",
    "pyjwt>=2.10.0",
    "pyjwt-key-fetcher>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ark_auth*"]
